# mask-generator

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  ising.cpp  ising.py  percolation.cpp  percolation.py
maskgen/: CMakeLists.txt  __init__.py  engine.cpp  ising.hpp  ising.py  lattice.hpp  percolation.hpp  percolation.py
